Added /rate endpoint to test Body() method in design
